# chess-tuning-tools

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: release.yml  tests.yml
chess-tuning/: io.py
chess-tuning/db_workers/: tuning_client.py
docs/: Makefile  conf.py  faq.myst  index.myst  index.rst  installation.rst  make.bat  parameters.myst  usage.myst  usage.rst
examples/: README.rst  client.json  complete_config.json  experiment.json  external_resources.sh  onstart.sh  simple_tune.json
examples/distributed/: client.json  experiment.json
examples/vastai/: README.rst  config.json  onstart.sh
tests/: __init__.py  test_dbutils.py  test_io.py  test_local.py  test_priors.py  test_tune.py  test_utils.py
tune/: __init__.py  cli.py  io.py  local.py  plots.py  priors.py  summary.py  utils.py
tune/db_workers/: __init__.py  tuning_client.py  tuning_server.py  utils.py
tune/db_workers/dbmodels/: __init__.py  base_model.py  models.py
