[tool.poetry]
name = "chess-tuning-tools"
version = "0.7.2"
description = "A collection of tools for local and distributed tuning of chess engines."
authors = ["Karlson Pfannschmidt <kiudee@mail.upb.de>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]
readme = "README.rst"
repository = "https://github.com/kiudee/chess-tuning-tools"
keywords = ["chess", "tuning", "optimization", "engine"]
documentation = "https://chess-tuning-tools.readthedocs.io"
packages = [
    {include = "tune"}
]

[tool.poetry.dependencies]
python = "^3.7"
bask = ">=0.9.3,<1.0.0"
Click = "^7.1.2"
numpy = "^1.19.1"
scipy = "^1.5.2"
scikit-optimize = "^0.8"
emcee = "^3.0.2"
atomicwrites = "^1.4.0"
scikit-learn = ">=0.22,<0.24"
joblib = {version = "^0.16.0", optional = true}
psycopg2 = {version = "^2.8.5", optional = true}
sqlalchemy = {version = "^1.3.18", optional = true}
pandas = {version = "^1.1.0", optional = true}
Sphinx = {version = "^3.1.2", optional = true}
sphinx-book-theme = {version = "^0.0.35", optional = true}
myst-nb = {version = "^0.9", optional = true}

[tool.poetry.extras]
dist = ["joblib", "psycopg2", "sqlalchemy", "pandas"]
docs = ["Sphinx", "sphinx-book-theme", "myst-nb"]

[tool.poetry.dev-dependencies]
tox = "^3.18.1"
pytest = "^6.0.1"
bump2version = "^1.0.0"
pip = "^20.2"
wheel = "^0.34.2"
flake8 = "^3.8.3"
Sphinx = "^3.1.2"
Click = "^7.1.2"
black = "^19.10b0"
pre-commit = "^2.6.0"
isort = "^5.3.2"
flake8-bugbear = "^20.1.4"
sphinx-book-theme = "^0.0.35"
myst-nb = "^0.9"
sphinx-autobuild = "^0.7.1"

[tool.poetry.scripts]
tune = "tune.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kiudee/chess-tuning-tools/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
