[tool.poetry]
name = "chess-tuning-tools"
version = "0.9.5"
description = "A collection of tools for local and distributed tuning of chess engines."
authors = ["Karlson Pfannschmidt <kiudee@mail.upb.de>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English"
]
readme = "README.rst"
repository = "https://github.com/kiudee/chess-tuning-tools"
keywords = ["chess", "tuning", "optimization", "engine"]
documentation = "https://chess-tuning-tools.readthedocs.io"
packages = [
    {include = "tune"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
bask = ">=0.9.3"
Click = ">=7.1.2"
numpy = ">=1.19.1,<1.24"
scipy = ">=1.5.2"
scikit-optimize = "^0.9"
atomicwrites = ">=1.4.0"
scikit-learn = "^1"
dill = ">=0.3.4"
joblib = {version = ">=0.16.0", optional = true}
psycopg2 = {version = ">=2.8.5", optional = true}
sqlalchemy = {version = ">=1.3.18", optional = true}
pandas = {version = ">=1.1.0", optional = true}
Sphinx = {version = ">=3", optional = true}
sphinx-book-theme = {version = ">=0.0.35", optional = true}
myst-nb = {version = ">=0.9", optional = true}

[tool.poetry.extras]
dist = ["joblib", "psycopg2", "sqlalchemy", "pandas"]
docs = ["Sphinx", "sphinx-book-theme", "myst-nb"]

[tool.poetry.dev-dependencies]
pytest = ">=6.0.1,<8"
pip = ">=21.1.2"
wheel = ">=0.34.2,<0.39"
flake8 = ">=3.8.3"
Sphinx = ">=3"
black = "~22"
pre-commit = ">=2.6.0"
isort = "^5.3.2"
flake8-bugbear = ">=20.1.4"
sphinx-book-theme = ">=0.0.35"
myst-nb = ">=0.9"
sphinx-autobuild = ">=0.7.1"
nox = ">=2023.4.22"
nox-poetry = ">=1.0.3"
mypy = ">=0.910"

[tool.poetry.scripts]
tune = "tune.cli:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kiudee/chess-tuning-tools/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
