[project]
name = "chess-tuning-tools"
version = "0.9.5"
description = "A collection of tools for local and distributed tuning of chess engines."
authors = [{ name = "Karlson Pfannschmidt", email = "kiudee@mail.upb.de" }]
requires-python = ">=3.10,<3.14"
readme = "README.rst"
license = "Apache-2.0"
keywords = [
    "chess",
    "tuning",
    "optimization",
    "engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
dependencies = [
    "atomicwrites>=1.4.0",
    "bask>=0.11.0",
    "Click>=7.1.2",
    "dill>=0.3.4",
    "numpy>=2.0.0",
    "scikit-learn>=1,<2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.5.2",
]

[project.optional-dependencies]
dist = [
    "joblib>=0.16.0",
    "pandas>=1.1.0",
    "psycopg2>=2.8.5",
    "sqlalchemy>=1.3.18",
]
docs = [
    "Sphinx>=3",
    "myst-nb>=0.9",
    "sphinx-book-theme>=0.0.35",
]

[project.urls]
Repository = "https://github.com/kiudee/chess-tuning-tools"
Documentation = "https://chess-tuning-tools.readthedocs.io"
"Bug Tracker" = "https://github.com/kiudee/chess-tuning-tools/issues"

[project.scripts]
tune = "tune.cli:cli"

[dependency-groups]
dev = [
    "black>=22,<23",
    "flake8-bugbear>=20.1.4",
    "flake8>=3.8.3",
    "isort>=5.3.2,<6",
    "mypy>=0.910",
    "nox-uv>=0.6.0",
    "nox>=2023.4.22",
    "pip>=21.1.2",
    "pre-commit>=2.6.0",
    "pytest>=6.0.1",
    "sphinx-autobuild>=0.7.1",
    "Sphinx>=3",
    "wheel>=0.34.2",
]

[tool.hatch.build.targets.sdist]
include = ["tune"]

[tool.hatch.build.targets.wheel]
include = ["tune"]

[build-system]
requires = ["hatchling>=1.15"]
build-backend = "hatchling.build"
